--- a/dollar-plugins/dollar-metrics-plugin/pom.xml
+++ b/dollar-plugins/dollar-metrics-plugin/pom.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!--
-  ~ Copyright (c) 2014 Neil Ellis
+  ~ Copyright (c) 2014-2015 Neil Ellis
   ~
   ~ Licensed under the Apache License, Version 2.0 (the "License");
   ~ you may not use this file except in compliance with the License.
@@ -37,7 +37,6 @@
         <dependency>
             <groupId>io.dropwizard.metrics</groupId>
             <artifactId>metrics-core</artifactId>
-            <version>3.1.0</version>
         </dependency>
     </dependencies>
 
