--- a/dollar-runtime/pom.xml
+++ b/dollar-runtime/pom.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!--
-  ~ Copyright (c) 2014 Neil Ellis
+  ~ Copyright (c) 2014-2015 Neil Ellis
   ~
   ~ Licensed under the Apache License, Version 2.0 (the "License");
   ~ you may not use this file except in compliance with the License.
@@ -37,7 +37,11 @@
             <artifactId>junit</artifactId>
             <scope>test</scope>
         </dependency>
-
+        <dependency>
+            <artifactId>dollar-std-resources-plugins</artifactId>
+            <groupId>me.neilellis</groupId>
+            <version>0-SNAPSHOT</version>
+        </dependency>
         <dependency>
             <groupId>me.neilellis</groupId>
             <artifactId>dollar-class-resolver-plugin</artifactId>
@@ -56,6 +60,21 @@
         <dependency>
             <groupId>me.neilellis</groupId>
             <artifactId>dollar-script</artifactId>
+            <version>0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>me.neilellis</groupId>
+            <artifactId>dollar-redis-plugin</artifactId>
+            <version>0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>me.neilellis</groupId>
+            <artifactId>dollar-http-plugin</artifactId>
+            <version>0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>me.neilellis</groupId>
+            <artifactId>dollar-metrics-plugin</artifactId>
             <version>0-SNAPSHOT</version>
         </dependency>
         <dependency>
