--- a/pom.xml
+++ b/pom.xml
@@ -38,19 +38,24 @@
 
     <name>Dollar</name>
     <description>Lightweight, dynamic data oriented Java</description>
-    <contributors>
-        <contributor>
+    <ciManagement>
+        <url>https://circleci.com/gh/neilellis/dollar/tree/master</url>
+    </ciManagement>
+    <developers>
+        <developer>
             <name>Neil Ellis</name>
-            <organization>Cazcade Limited</organization>
-            <organizationUrl>http://cazcade.com</organizationUrl>
+            <organization>Neil Ellis</organization>
+            <organizationUrl>http://neilellis.me</organizationUrl>
             <roles>
                 <role>founder</role>
                 <role>developer</role>
             </roles>
             <timezone>GMT</timezone>
             <email>neil@cazcade.com</email>
-        </contributor>
-    </contributors>
+        </developer>
+    </developers>
+
+    <url>http://neilellis.github.io/dollar/</url>
 
     <licenses>
         <license>
@@ -450,70 +455,7 @@
     <!-- mvn surefire-report:report -->
     <reporting>
         <plugins>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-surefire-report-plugin</artifactId>
-                <version>2.14</version>
-                <configuration>
-                    <aggregate>true</aggregate>
-                </configuration>
-            </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-jxr-plugin</artifactId>
-                <version>2.1</version>
-            </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-project-info-reports-plugin</artifactId>
-                <version>2.7</version>
-                <!--<reportSets>-->
-                <!--<reportSet>-->
-                <!--<reports>-->
-                <!--<report>project-team</report>-->
-                <!--<report>mailing-list</report>-->
-                <!--<report>issue-tracking</report>-->
-                <!--<report>license</report>-->
-                <!--<report>scm</report>-->
-                <!--<report>index</report>-->
-                <!--<report>summary</report>-->
-                <!--<report>cim</report>-->
-                <!--<report>plugins</report>-->
-                <!--</reports>-->
-                <!--</reportSet>-->
-                <!--</reportSets>-->
-            </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-changes-plugin</artifactId>
-                <version>2.11</version>
-                <reportSets>
-                    <reportSet>
-                        <reports>
-                            <report>changes-report</report>
-                        </reports>
-                    </reportSet>
-                </reportSets>
-            </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-changelog-plugin</artifactId>
-                <version>2.3</version>
-            </plugin>
-            <plugin>
-                <groupId>org.codehaus.mojo</groupId>
-                <artifactId>taglist-maven-plugin</artifactId>
-            </plugin>
-            <plugin>
-                <groupId>org.codehaus.mojo</groupId>
-                <artifactId>findbugs-maven-plugin</artifactId>
-                <version>3.0.0</version>
-                <configuration>
-                    <xmlOutput>true</xmlOutput>
-                    <!-- Optional directory to put findbugs xdoc xml report -->
-                    <xmlOutputDirectory>target/site</xmlOutputDirectory>
-                </configuration>
-            </plugin>
+
         </plugins>
     </reporting>
 
@@ -603,24 +545,47 @@
                 <groupId>org.complykit</groupId>
                 <artifactId>license-check-maven-plugin</artifactId>
                 <version>0.5.2</version>
-                <executions>
-                    <execution>
-                        <phase>verify</phase>
-                        <goals>
-                            <goal>os-check</goal>
-                        </goals>
-                    </execution>
-                </executions>
+                <!--<executions>-->
+                <!--<execution>-->
+                <!--<phase>verify</phase>-->
+                <!--<goals>-->
+                <!--<goal>os-check</goal>-->
+                <!--</goals>-->
+                <!--</execution>-->
+                <!--</executions>-->
                 <configuration>
                     <excludes>
-                        <param>me.neilellis:dollar-std-resources-plugin:0-SNAPSHOT</param>
-                        <param>me.neilellis:dollar-redis-plugin:0-SNAPSHOT</param>
-                        <param>me.neilellis:dollar-metrics-plugin:0-SNAPSHOT</param>
-                        <param>me.neilellis:dollar-http-plugin:0-SNAPSHOT</param>
+                        <param>com.fasterxml.jackson.core:jackson-core:2.3.3</param>
+                        <param>com.fasterxml.jackson.core:jackson-databind:2.3.3</param>
+                        <param>com.jayway.restassured:rest-assured:2.3.3</param>
+                        <param>com.jcabi:jcabi-aether:0.10.1</param>
+                        <param>com.jcabi:jcabi-log:0.7.21</param>
+                        <param>commons-codec:commons-codec:1.8</param>
+                        <param>commons-io:commons-io:2.4</param>
+                        <param>commons-lang:commons-lang:2.6</param>
+                        <param>io.dropwizard.metrics:metrics-core:3.1.0</param>
                         <param>me.neilellis:dollar-camel-plugin:0-SNAPSHOT</param>
                         <param>me.neilellis:dollar-core:0-SNAPSHOT</param>
+                        <param>me.neilellis:dollar-http-plugin:0-SNAPSHOT</param>
+                        <param>me.neilellis:dollar-metrics-plugin:0-SNAPSHOT</param>
+                        <param>me.neilellis:dollar-redis-plugin:0-SNAPSHOT</param>
                         <param>me.neilellis:dollar-resolver:0-SNAPSHOT</param>
                         <param>me.neilellis:dollar-script:0-SNAPSHOT</param>
+                        <param>me.neilellis:dollar-std-resources-plugin:0-SNAPSHOT</param>
+                        <param>org.apache.camel:camel-core:2.14.0</param>
+                        <param>org.apache.camel:camel-http:2.14.0</param>
+                        <param>org.apache.camel:camel-parent:2.14.0</param>
+                        <param>org.apache.camel:camel-test:2.14.0</param>
+                        <param>org.apache.commons:commons-lang3:3.3.2</param>
+                        <param>org.apache.httpcomponents:httpasyncclient:4.0.1</param>
+                        <param>org.apache.httpcomponents:httpclient:4.3.4</param>
+                        <param>org.apache.httpcomponents:httpmime:4.3.4</param>
+                        <param>org.apache.maven.wagon:wagon-provider-api:2.4</param>
+                        <param>org.apache.maven:maven-core:3.0.5</param>
+                        <param>org.codehaus.plexus:plexus-utils:3.0.15</param>
+                        <param>org.json:json:20140107</param>
+                        <param>org.slf4j:slf4j-api:1.7.7</param>
+                        <param>org.sonatype.sisu:sisu-inject-plexus:2.3.0</param>
                     </excludes>
                     <blacklist>
                         <param>agpl-3.0</param>
@@ -816,6 +781,97 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-site-plugin</artifactId>
                 <version>3.4</version>
+                <executions>
+                    <execution>
+                        <id>attach-descriptor</id>
+                        <goals>
+                            <goal>attach-descriptor</goal>
+                        </goals>
+                    </execution>
+                </executions>
+                <configuration>
+                    <reportPlugins>
+                        <plugin>
+                            <groupId>org.codehaus.mojo</groupId>
+                            <artifactId>clirr-maven-plugin</artifactId>
+                            <version>2.6.1</version>
+                        </plugin>
+                        <plugin>
+                            <groupId>org.apache.maven.plugins</groupId>
+                            <artifactId>maven-surefire-report-plugin</artifactId>
+                            <version>2.14</version>
+                            <configuration>
+                                <aggregate>true</aggregate>
+                            </configuration>
+                        </plugin>
+                        <!--<plugin>-->
+                        <!--<groupId>org.apache.maven.plugins</groupId>-->
+                        <!--<artifactId>maven-jxr-plugin</artifactId>-->
+                        <!--<version>2.1</version>-->
+                        <!--</plugin>-->
+                        <plugin>
+                            <groupId>org.apache.maven.plugins</groupId>
+                            <artifactId>maven-project-info-reports-plugin</artifactId>
+                            <version>2.7</version>
+                            <!--<reportSets>-->
+                            <!--<reportSet>-->
+                            <!--<reports>-->
+                            <!--<report>project-team</report>-->
+                            <!--<report>mailing-list</report>-->
+                            <!--<report>issue-tracking</report>-->
+                            <!--<report>license</report>-->
+                            <!--<report>scm</report>-->
+                            <!--<report>index</report>-->
+                            <!--<report>summary</report>-->
+                            <!--<report>cim</report>-->
+                            <!--<report>plugins</report>-->
+                            <!--</reports>-->
+                            <!--</reportSet>-->
+                            <!--</reportSets>-->
+                        </plugin>
+                        <plugin>
+                            <groupId>org.apache.maven.plugins</groupId>
+                            <artifactId>maven-changes-plugin</artifactId>
+                            <version>2.11</version>
+                            <reportSets>
+                                <reportSet>
+                                    <reports>
+                                        <report>changes-report</report>
+                                    </reports>
+                                </reportSet>
+                            </reportSets>
+                        </plugin>
+                        <plugin>
+                            <groupId>org.apache.maven.plugins</groupId>
+                            <artifactId>maven-changelog-plugin</artifactId>
+                            <version>2.3</version>
+                        </plugin>
+                        <plugin>
+                            <groupId>org.codehaus.mojo</groupId>
+                            <artifactId>taglist-maven-plugin</artifactId>
+                        </plugin>
+                        <plugin>
+                            <groupId>org.codehaus.mojo</groupId>
+                            <artifactId>findbugs-maven-plugin</artifactId>
+                            <version>3.0.0</version>
+                            <configuration>
+                                <xmlOutput>true</xmlOutput>
+                                <!-- Optional directory to put findbugs xdoc xml report -->
+                                <xmlOutputDirectory>target/site</xmlOutputDirectory>
+                            </configuration>
+                        </plugin>
+                        <plugin>
+                            <groupId>org.codehaus.mojo</groupId>
+                            <artifactId>cobertura-maven-plugin</artifactId>
+                            <version>2.5.1</version>
+                            <configuration>
+                                <aggregate>true</aggregate>
+                                <outputDirectory>%{project.reporting.outputDirectory}/cobertura</outputDirectory>
+                            </configuration>
+                        </plugin>
+                    </reportPlugins>
+                    <locales>en</locales>
+                </configuration>
                 <dependencies>
                     <dependency>
                         <groupId>org.apache.maven.doxia</groupId>
@@ -828,6 +884,7 @@
                         <version>1.3.1</version>
                     </dependency>
                 </dependencies>
+
             </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
@@ -853,7 +910,11 @@
                 <artifactId>jacoco-maven-plugin</artifactId>
                 <version>0.7.2.201409121644</version>
             </plugin>
-
+            <plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>clirr-maven-plugin</artifactId>
+                <version>2.6.1</version>
+            </plugin>
         </plugins>
     </build>
 
