--- a/dollar-runtime/pom.xml
+++ b/dollar-runtime/pom.xml
@@ -73,6 +73,11 @@
         </dependency>
         <dependency>
             <groupId>me.neilellis</groupId>
+            <artifactId>dollar-camel-plugin</artifactId>
+            <version>0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>me.neilellis</groupId>
             <artifactId>dollar-simple-learner-plugin</artifactId>
             <version>0-SNAPSHOT</version>
         </dependency>
