--- a/dollar-resolver/pom.xml
+++ b/dollar-resolver/pom.xml
@@ -32,6 +32,7 @@
             <groupId>me.neilellis</groupId>
             <artifactId>dollar-core</artifactId>
             <version>0-SNAPSHOT</version>
+            <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>org.sonatype.aether</groupId>
