--- a/dollar-docs/pom.xml
+++ b/dollar-docs/pom.xml
@@ -30,7 +30,7 @@
         <dependency>
             <groupId>me.neilellis</groupId>
             <artifactId>dollar-runtime</artifactId>
-            <version>0-SNAPSHOT</version>
+            <version>${project.version}</version>
         </dependency>
         <dependency>
             <groupId>junit</groupId>
