--- a/dollar-plugins/dollar-camel-plugin/pom.xml
+++ b/dollar-plugins/dollar-camel-plugin/pom.xml
@@ -30,7 +30,7 @@
         <dependency>
             <groupId>me.neilellis</groupId>
             <artifactId>dollar-core</artifactId>
-            <version>0-SNAPSHOT</version>
+            <version>${project.version}</version>
             <scope>provided</scope>
         </dependency>
         <dependency>
