--- a/dollar-plugins/dollar-class-resolver-plugin/pom.xml
+++ b/dollar-plugins/dollar-class-resolver-plugin/pom.xml
@@ -30,20 +30,20 @@
         <dependency>
             <groupId>me.neilellis</groupId>
             <artifactId>dollar-core</artifactId>
-            <version>0-SNAPSHOT</version>
+            <version>${project.version}</version>
             <scope>provided</scope>
 
         </dependency>
         <dependency>
             <groupId>me.neilellis</groupId>
             <artifactId>dollar-resolver</artifactId>
-            <version>0-SNAPSHOT</version>
+            <version>${project.version}</version>
         </dependency>
 
         <dependency>
             <groupId>me.neilellis</groupId>
             <artifactId>dollar-script</artifactId>
-            <version>0-SNAPSHOT</version>
+            <version>${project.version}</version>
             <scope>provided</scope>
 
         </dependency>
