--- a/dollar-plugins/dollar-http-plugin/pom.xml
+++ b/dollar-plugins/dollar-http-plugin/pom.xml
@@ -29,7 +29,7 @@
         <dependency>
             <groupId>me.neilellis</groupId>
             <artifactId>dollar-core</artifactId>
-            <version>0-SNAPSHOT</version>
+            <version>${project.version}</version>
             <scope>provided</scope>
 
         </dependency>
