--- a/dollar-resolver/pom.xml
+++ b/dollar-resolver/pom.xml
@@ -31,7 +31,7 @@
         <dependency>
             <groupId>me.neilellis</groupId>
             <artifactId>dollar-core</artifactId>
-            <version>0-SNAPSHOT</version>
+            <version>${project.version}</version>
             <scope>provided</scope>
         </dependency>
         <dependency>
