--- a/pom.xml
+++ b/pom.xml
@@ -865,11 +865,11 @@
                     <includes>
                         <include>**/*Test.java</include>
                     </includes>
-                    <forkCount>8</forkCount>
-                    <reuseForks>true</reuseForks>
-                    <argLine>-Xmx1024m</argLine>
-                    <parallel>methods</parallel>
-                    <threadCount>10</threadCount>
+                    <!--<forkCount>8</forkCount>-->
+                    <!--<reuseForks>true</reuseForks>-->
+                    <!--<argLine>-Xmx1024m</argLine>-->
+                    <!--<parallel>methods</parallel>-->
+                    <!--<threadCount>10</threadCount>-->
                 </configuration>
                 <dependencies>
                     <dependency>
